objects/JunoDoc__Junodoc_Add_Email_Recipient__c/JunoDoc__Junodoc_Add_Email_Recipient__c.object-meta.xml
<CustomObject>
    <label>Junodoc Add Email Recipient</label>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Junodoc Add Email Recipient Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Junodoc Add Email Recipient</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>