objects/JunoDoc__Junodoc_Add_Email_Recipient__c/fields/JunoDoc__Email_Label_Values__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Email_Label_Values__c</fullName>
    <label>Email Label Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>