objects/JunoDoc__Junodoc_Add_Email_Recipient__c/fields/JunoDoc__Juno_Doc_Trigger_Action__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Juno_Doc_Trigger_Action__c</fullName>
    <label>Juno Doc Trigger Action</label>
    <referenceTo>JunoDoc__Juno_Doc_Trigger_Action__c</referenceTo>
    <relationshipLabel>Junodoc Add Email Recipient</relationshipLabel>
    <relationshipName>Junodoc_Add_Email_Recipient</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>