objects/JunoDoc__Junodoc_Add_Email_Recipient__c/fields/JunoDoc__Reference_Type__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Reference_Type__c</fullName>
    <label>Reference Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>