objects/JunoDoc__Junodoc_Add_Email_Recipient__c/fields/JunoDoc__Row_Number__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Row_Number__c</fullName>
    <label>Row Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>