objects/JunoDoc__Junodoc_Add_Email_Recipient__c/fields/JunoDoc__To_Cc_Bcc__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__To_Cc_Bcc__c</fullName>
    <label>To Cc Bcc</label>
    <length>20</length>
    <type>Text</type>
</CustomField>